[gd_scene load_steps=9 format=2]

[ext_resource path="res://screens/screen-plugins/chat-minions/assets/DefaultMinion.png" type="Texture" id=1]
[ext_resource path="res://screens/screen-plugins/chat-minions/entities/minion.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=6]
friction = 0.85
bounce = 0.5

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Move"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.129412, 0.129412, 0.129412, 0.556863 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Minion" type="RigidBody2D"]
collision_mask = 2
input_pickable = true
mode = 2
physics_material_override = SubResource( 6 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Move = SubResource( 4 )
anims/RESET = SubResource( 3 )

[node name="ChatBubble" type="Label" parent="."]
visible = false
margin_left = -64.0
margin_top = -70.0
margin_right = 64.0
margin_bottom = -36.0
rect_min_size = Vector2( 128, 0 )
custom_styles/normal = SubResource( 5 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NamePlate" type="Label" parent="."]
margin_left = -64.0
margin_top = 38.0
margin_right = 64.0
margin_bottom = 72.0
rect_min_size = Vector2( 128, 0 )
custom_styles/normal = SubResource( 5 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SayTimer" type="Timer" parent="."]
one_shot = true

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true

[node name="CollsionLayerTimer" type="Timer" parent="."]
one_shot = true
